
# Copyright (c) 2017-2023 King Abdullah University of Science and Technology,
# Copyright (c) 2023 by Brightskies inc,
# All rights reserved.
# ExaGeoStat is a software package, provided by King Abdullah University of Science and Technology (KAUST).

# @file CMakeLists.txt
# @version 1.0.0
# @author Sameh Abdulah
# @date 2023-02-14
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/concrete)

set(SOURCES
        ${CMAKE_CURRENT_SOURCE_DIR}/DataGenerator.cpp
        ${SOURCES}
        PARENT_SCOPE
        )